force-app/main/default/objects/Film_Spark_Film__c/Film_Spark_Film__c.object-meta.xml
<CustomObject>
    <label>Film Spark Film</label>
    <nameField>
        <label>Film Spark Films Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Film Spark Films</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>