force-app/main/default/objects/Film_Spark_Film__c/fields/Description_FilmSpark__c.field-meta.xml
<CustomField>
    <fullName>Description_FilmSpark__c</fullName>
    <inlineHelpText>Long description of film.  No character limit.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>