force-app/main/default/objects/Film_Spark_Film__c/fields/Film_Spark_Image_s_FilmSpark__c.field-meta.xml
<CustomField>
    <fullName>Film_Spark_Image_s_FilmSpark__c</fullName>
    <inlineHelpText>Images of the film.</inlineHelpText>
    <label>Film Spark Image(s)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>