force-app/main/default/objects/Film_Spark_Film__c/fields/Short_Description_FilmSpark__c.field-meta.xml
<CustomField>
    <fullName>Short_Description_FilmSpark__c</fullName>
    <inlineHelpText>Short description: 110 Character limit</inlineHelpText>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>